- Re-worked the 32- vs 64-bit build code so Windows now uses force32 and force64 like the other OSs and just "Windows" for the platform - Added "x64" designator to title bar & about window for 64-bit builds (on all platforms) - Automated a number of items & paths on all platforms to reflect 32- or 64-bit builds (now we just need to separate the SCons config DBs) - Changed makerelease to use blended code so AMD's and Intel's x64 CPUs perform similiarly - Fixed SoundTouch optimization inclusion to finally work correctly on x64 (though no 3DNow! since it has embedded assembly.) - Changed version to beta3-pre (and fixed About window so it shows the whole thing :) ) - Added code to slap the new version number on 1.7.x config files since nothing has changed (only added) NOTE: force32 is no longer a persistent option and must be specified each time you do a build (I had to do it this way because it has to be evaluated in the SConstruct so the "bitwidth" variable is set correctly.) BIG NOTE: Since the m4a plugin uses a cut-n-pasted SConscript, it doesn't automatically get all of the changes mentioned above. Until Albert corrects it, I've commented out the M4A inclusion. You'll still get an error (as a reminder I guess,) but at least Mixxx builds. (I'll send a patch to the mailing list that re-enables it.)

--- a/mixxx/plugins/soundsourcem4a/SConscript
+++ b/mixxx/plugins/soundsourcem4a/SConscript
@@ -96,8 +96,7 @@ Import('architecture')	#CPU type & binary format for optimization
 default_qtdir = {'linux': '/usr/share/qt4',
 		 'bsd': '/usr/local/lib/qt4',
 		 'osx': '/usr/lib/Qt-4.5', #XXX this should be smarter, we just need qt4 so we should accept the highest version that matches /usr/lib/Qt-4.*.*/
-		 'win32': 'C:\\qt\\4.5.1',
-		 'win64': 'C:\\qt\\4.5.1'}[platform]	 #ditto
+		 'windows': 'C:\\qt\\4.5.1'}[platform]	 #ditto
 
 #Read the qtdir flag, if it was set explicitly
 flags_qtdir = ARGUMENTS.get('qtdir', os.environ.get('QTDIR', default_qtdir)) #environ['QTDIR'] there is mainly for the benefit of MSVC
