Refactoring code to allow multiple instances of an Effect. EffectsUnitsInstance is born. Introducing Slots and Widgets stubs.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -969,8 +969,11 @@ if int(flags_fxunits):
 	sources += Split("""
 			engine/engineeffectsunits.cpp
 			effectsunitsview.cpp 
+			effectsunitsslot.cpp 
+			effectsunitswidget.cpp 
 			effectsunits/effectsunitscontroller.cpp 
 			effectsunits/effectsunitsplugin.cpp 
+			effectsunits/effectsunitsinstance.cpp 
 			effectsunits/effectsunitsbackend.cpp 
 			effectsunits/ladspabackend.cpp 
 			effectsunits/debugbackend.cpp 
