--- a/mixxx/plugins/SConscript
+++ b/mixxx/plugins/SConscript
@@ -2,9 +2,10 @@
 # -*- coding: utf-8 -*-
 
 Import('build_dir')
+Import('env', 'flags', 'platform')
 
 plugins = [] 
-soundsourcem4a = SConscript(File('soundsourcem4a/SConscript'), build_dir=Dir(build_dir), duplicate=0) 
+soundsourcem4a = SConscript(File('soundsourcem4a/SConscript'), build_dir=Dir(build_dir), duplicate=0, exports=['env','flags']) 
 plugins.extend(soundsourcem4a)
 
 Return("plugins")
