--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -1,6 +1,7 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
 import os
+import SCons.Script
 
 Import('platform')
 Import('machine')	#CPU architecture for optimization
