Added sampler stuff to SConscript

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -295,7 +295,8 @@ sources = Split("""
 		analyserwavesummary.cpp
 		analyserbpm.cpp
 		analyserwaveform.cpp
-
+		
+				
                 midi/midimapping.cpp
                 midi/midiinputmappingtablemodel.cpp
                 midi/midioutputmappingtablemodel.cpp
@@ -399,6 +400,7 @@ sources = Split("""
                 library/promotracksfeature.cpp
                 library/promotrackswebview.cpp
 
+				sampleutil.cpp
                 xmlparse.cpp
                 parser.cpp
                 parserpls.cpp
