Fixed variable name mixups

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -23,7 +23,7 @@ def determinePlatform():
 		 platformString = 'osx'
 	else:
 		print 'Platform: Unknown (assuming Linux-like,) ' + machine
-		platformName = 'linux'
+		platformString = 'linux'
 		
 	Export('platformString')
 	return platformString
@@ -42,25 +42,25 @@ def determineArchitecture(platformString):
 	flags_force32 = ARGUMENTS.get('force32', 0)
 	flags_force64 = ARGUMENTS.get('force64', 0)
 	if int(flags_force32) and not int(flags_force64):
-		if 'win' in platformName:
+		if 'win' in platformString:
 			machine = 'x86'
 		else:
 			env.Append(CCFLAGS = '-m32')
 			env.Append(CXXFLAGS = '-m32')
 			env.Append(LINKFLAGS = '-m32')
 		bitwidth = '32'
-		print 'FORCING ' +bitwidth+ '-BIT BUILD: ' + platformName + ' ' + machine + ' (' + bitwidth + 'bit)'
+		print 'FORCING ' +bitwidth+ '-BIT BUILD: ' + platformString + ' ' + machine + ' (' + bitwidth + 'bit)'
 
 	#force 64-bit compile
 	if int(flags_force64) and not int(flags_force32):
-		if 'win' in platformName:
+		if 'win' in platformString:
 			machine = 'AMD64'
 		else:
 			env.Append(CCFLAGS = '-m64')
 			env.Append(CXXFLAGS = '-m64')
 			env.Append(LINKFLAGS = '-m64')
 		bitwidth = '64'
-		print 'FORCING ' +bitwidth+ '-BIT BUILD: ' + platformName + ' ' + machine + ' (' + bitwidth + 'bit)'
+		print 'FORCING ' +bitwidth+ '-BIT BUILD: ' + platformString + ' ' + machine + ' (' + bitwidth + 'bit)'
 
 	print 'Binary format: ' + architecture[1]
 
