* Reorganized promo tracks code, removed hardcoded version strings. * Added promo stats agreement, show it on first run or when upgrading. * Added lots of stub code for online promo tracks view.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -427,7 +427,9 @@ sources = Split("""
                 library/librarymidicontrol.cpp
                 library/schemamanager.cpp
                 library/promotracksfeature.cpp
-                library/promotrackswebview.cpp
+                library/featuredartistswebview.cpp
+                library/bundledsongswebview.cpp
+                library/songdownloader.cpp
 
                 xmlparse.cpp
                 parser.cpp
