* added shoutcast compile instructions to SConscript * shoutcast will be enabled by default

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -252,7 +252,7 @@ vars.Add('ipod', 'Set to 1 to enable iPod support through libgpod', 0)
 vars.Add('ladspa', '(EXPERIMENTAL) Set to 1 to enable LADSPA plugin support', 0)
 vars.Add('ffmpeg', '(EXPERIMENTAL) Set to 1 to enable FFMPEG support', 0)
 vars.Add('vinylcontrol', 'Set to 1 to enable vinyl control support', 1)
-vars.Add('shoutcast', 'Set to 1 to enable shoutcast support', 0)
+vars.Add('shoutcast', 'Set to 1 to enable shoutcast support', 1)
 vars.Add('cmetrics', 'Set to 1 to enable crash reporting/usage statistics via Case Metrics (This should be disabled on development builds)', 0)
 vars.Add('asmlib','Set to 1 to enable linking against Agner Fog\'s hand-optimized asmlib, found at http://www.agner.org/optimize/', 0)
 vars.Add('script', 'Set to 1 to enable MixxxScript/QtScript Studio support.', 0)
@@ -504,9 +504,10 @@ sources = Split("""
                 soundmanager.cpp
                 sounddeviceportaudio.cpp
                 dlgprefrecord.cpp
-                recording/enginerecord.cpp
-                recording/writeaudiofile.cpp
                 playerinfo.cpp
+
+                recording/enginerecord.cpp
+				recording/encoder.cpp
 
                 segmentation.cpp
                 """)
@@ -612,6 +613,9 @@ if not conf.CheckLib(['portmidi', 'libportmidi']) and not conf.CheckHeader(['por
  	print "Did not find PortMidi or its development headers, exiting!"
  	Exit(1)
 
+#check for libshout
+libshout_found = conf.CheckLib(['libshout','shout'])
+vorbisenc = conf.CheckLib('vorbisenc')
 
 sources += Split("""midi/mididevice.cpp """);
 sources += Split("""midi/mididevicemanager.cpp """);
@@ -791,9 +795,10 @@ if 'win' in platformString:
 	env.Append(LIBS = 'QtWebKit4');
 	env.Append(LIBS = 'QtOpenGL4');
 	env.Append(LIBS = 'WinMM'); #Needed for Midi stuff
-	env.Append(LIBS = 'ogg_static')
-	env.Append(LIBS = 'vorbis_static')
-	env.Append(LIBS = 'vorbisfile_static')
+    #Tobias Rafreider: libshout won't compile if you uncomment this
+	#env.Append(LIBS = 'ogg_static')
+	#env.Append(LIBS = 'vorbis_static')
+	#env.Append(LIBS = 'vorbisfile_static')
 	env.Append(LIBS = 'imm32')
 	env.Append(LIBS = 'wsock32')
 	env.Append(LIBS = 'delayimp')
@@ -949,35 +954,33 @@ if int(flags['ipod']):
 else:
 	print "iPod support... disabled"
 
-#Experimental Shoutcast
-flags['shoutcast'] = getFlags(env, 'shoutcast', 0)
+#Shoutcast support
+flags_shoutcast = getFlags(env, 'shoutcast', 0)
 
-if int(flags['shoutcast']):
+if int(flags_shoutcast):
 	shoutmp3 = 0
-	shoutogg = 0
-
-	conf = Configure(env, custom_tests = { 'CheckForPKGConfig' : CheckForPKGConfig, 'CheckForPKG' : CheckForPKG })
-	if not conf.CheckLib('shout'):
+	shoutogg = 1
+	if not libshout_found:
 		print "libshout was not found! Please install it or compile Mixxx without Shoutcast support using the shoutcast=0 flag."
 		Exit(1)
-
+	
 	env.Append(CPPDEFINES = '__SHOUTCAST__')
-
-	sources += Split(""" dlgprefshoutcast.cpp engine/engineshoutcast.cpp encoder.cpp """ )
+	if 'win' in platformString:
+		env.Append(LIBS = 'pthreadVC2')
+		env.Append(LIBS = 'pthreadVCE2')
+		env.Append(LIBS = 'pthreadVSE2')
+	else:
+		if not vorbisenc: 
+			#libvorbisenc does only exist on Linux and OSX, on Windows it is included in vorbisfile.dll
+			print "libvorbisenc was not found! Please install it or compile Mixxx without Shoutcast support using the shoutcast=0 flag."
+			Exit(1)
+	
+	sources += Split(""" dlgprefshoutcast.cpp engine/engineshoutcast.cpp recording/encodervorbis.cpp recording/encodermp3.cpp""" )
 	build_flags += 'shoutcast '
-
-
-	if conf.CheckLibWithHeader('mp3lame', 'lame/lame.h', 'C'):
-		env.Append(CPPDEFINES = '__SHOUTCAST_LAME__')
-		sources += Split(""" encodermp3.cpp """)
-		shoutmp3 = 1
-
-	if conf.CheckLib('vorbisenc'):
-		env.Append(CPPDEFINES = '__SHOUTCAST_VORBIS__')
-		sources += Split("""  encodervorbis.cpp """)
-		shoutogg = 1
-
-
+	
+	shoutmp3 = 1
+	shoutogg = 1
+	
 	if shoutmp3 and shoutogg:
 		print "Shoutcast support (OGG/MP3)... enabled"
 	elif shoutmp3:
