Renamed all the PrefNewSound stuff to PrefSound, got rid of old prefs.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -276,7 +276,7 @@ sources = Split("""
 
                 dlgpreferences.cpp
                 dlgprefsound.cpp
-                dlgprefnewsound.cpp
+                dlgprefsounditem.cpp
                 dlgprefmidibindings.cpp
                 dlgprefplaylist.cpp
                 dlgprefnomidi.cpp
@@ -290,7 +290,6 @@ sources = Split("""
                 dlgtrackinfo.cpp
                 dlgprepare.cpp
                 dlgautodj.cpp
-                dlgprefnewsounditem.cpp
 
                 engine/engineworker.cpp
                 engine/engineworkerscheduler.cpp
@@ -771,7 +770,6 @@ else:
 #Uic these guys (they're moc'd automatically after this) - Generates the code for the QT UI forms
 env.Uic4('dlgpreferencesdlg.ui')
 env.Uic4('dlgprefsounddlg.ui')
-env.Uic4('dlgprefnewsounddlg.ui')
 env.Uic4('dlgprefmidibindingsdlg.ui')
 env.Uic4('dlgprefplaylistdlg.ui')
 env.Uic4('dlgprefnomididlg.ui')
@@ -788,7 +786,7 @@ env.Uic4('dlgmidilearning.ui')
 env.Uic4('dlgtrackinfo.ui')
 env.Uic4('dlgprepare.ui')
 env.Uic4('dlgautodj.ui')
-env.Uic4('dlgprefnewsounditem.ui')
+env.Uic4('dlgprefsounditem.ui')
 
 #Add the QRC file which compiles in some extra resources (prefs icons, etc.)
 env.Qrc('#res/mixxx.qrc')
