fixed some compile errors on Windows which were introduced while merging trunk.

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -795,6 +795,7 @@ if 'win' in platformString:
 	env.Append(LIBS = 'QtGui4');
 	env.Append(LIBS = 'QtCore4');
 	env.Append(LIBS = 'QtWebKit4');
+	env.Append(LIBS = 'QtNetwork4')
 	env.Append(LIBS = 'QtOpenGL4');
 	env.Append(LIBS = 'WinMM'); #Needed for Midi stuff
     #Tobias Rafreider: libshout won't compile if you uncomment this
@@ -857,7 +858,8 @@ sources += Split(""" #res/qrc_mixxx.cc """)
 
 if 'win' in platformString:
 	env.RES('mixxx.rc')
-	sources += Split(""" mixxx.res """)
+	#Tobias Rafreider: What is the purpose of the following line, if the file doesn't exist?
+	#sources += Split(""" mixxx.res """)
 
 #Tell SCons to build libraries that are bundled with Mixxx
 #===================================================
