--- a/mixxx/plugins/soundsourcem4a/SConscript
+++ b/mixxx/plugins/soundsourcem4a/SConscript
@@ -10,8 +10,10 @@ Import('env', 'flags', 'platformString')
 
 # On Posix default SCons.LIBPREFIX = 'lib', on Windows default SCons.LIBPREFIX = ''
 
-m4a_sources = []
-m4a_sources += Split("""soundsourcem4a.cpp""");  # MP4/M4A Support
+m4a_sources = [
+	"soundsource.cpp", # required to subclass soundsource
+	"soundsourcem4a.cpp",  # MP4/M4A Support
+]
 
 
 #Tell SCons to build the SoundSourceM4A plugin
