A couple of stubs to get me started. Presets are simple, all it takes is to verify them, so their information override our default.

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -1033,6 +1033,8 @@ if int(flags['fxunits']):
 			    effectsunits/effectsunitscontroller.cpp
 			    effectsunits/effectsunitsinstance.cpp
 			    effectsunits/effectsunitsplugin.cpp
+			    effectsunits/effectsunitspreset.cpp
+			    effectsunits/effectsunitspresetmanager.cpp
 			    effectsunits/ladspabackend.cpp
 			    effectsunitsslot.cpp
 			    effectsunitsview.cpp
