* re-merge the rest of my vinyl changes * current code has issues with CONST mode stuttering or stopping on needle liftup (new bug?)

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -1030,7 +1030,9 @@ if int(flags['vinylcontrol']):
 	if 'win' in platformString:
 		sources += Split("""#lib/xwax/timecoder_win32.c """)
 	else:
-		sources += Split("""#lib/xwax/timecoder.c """)
+		sources += Split("""#lib/xwax/timecoder.c 
+							#lib/xwax/lut.c
+							#lib/xwax/pitch.c""")
 	env.Append(CPPPATH='#lib/scratchlib')
 	sources += Split("""#lib/scratchlib/DAnalyse.cpp """)
 	print "Vinyl Control... enabled"
@@ -1409,6 +1411,7 @@ if 'msvc' in COMMAND_LINE_TARGETS:
 	msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = sources, incs = includes, variant = 'Debug', runfile = '../dist' + bitwidth + '/mixxx.exe')
 
 	# Reenable this once bug in scons is fixed...
+
 	#msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = sources, incs = includes, variant = 'Release', runfile = '../dist' + bitwidth + /mixxx.exe')
 
 	env.Alias('msvc', msvc)
