* add midi control for adjusting soundtouch seek window size

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -859,30 +859,31 @@ if 'win' in platformString:
 #SoundTouch
 #XXX this should be done with a subsconscript
 
-soundtouch_path = 'soundtouch-1.4.1'
+soundtouch_path = 'soundtouch'
+env.Append(CPPPATH=["""#lib/""" + soundtouch_path + """/include"""])
 
 env.Append(CPPPATH=['#lib/'+soundtouch_path])
 sources += Split("""engine/enginebufferscalest.cpp
-                    #lib/""" + soundtouch_path + """/SoundTouch.cpp
-                    #lib/""" + soundtouch_path + """/TDStretch.cpp
-                    #lib/""" + soundtouch_path + """/RateTransposer.cpp
-                    #lib/""" + soundtouch_path + """/AAFilter.cpp
-                    #lib/""" + soundtouch_path + """/FIFOSampleBuffer.cpp
-                    #lib/""" + soundtouch_path + """/FIRFilter.cpp
-                    #lib/""" + soundtouch_path + """/PeakFinder.cpp
-                    #lib/""" + soundtouch_path + """/BPMDetect.cpp
+                    #lib/""" + soundtouch_path + """/source/SoundTouch/SoundTouch.cpp
+                    #lib/""" + soundtouch_path + """/source/SoundTouch/TDStretch.cpp
+                    #lib/""" + soundtouch_path + """/source/SoundTouch/RateTransposer.cpp
+                    #lib/""" + soundtouch_path + """/source/SoundTouch/AAFilter.cpp
+                    #lib/""" + soundtouch_path + """/source/SoundTouch/FIFOSampleBuffer.cpp
+                    #lib/""" + soundtouch_path + """/source/SoundTouch/FIRFilter.cpp
+                    #lib/""" + soundtouch_path + """/source/SoundTouch/PeakFinder.cpp
+                    #lib/""" + soundtouch_path + """/source/SoundTouch/BPMDetect.cpp
                     """)
 
 if 'win' in platformString:
 	if bitwidth == '64':
-		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x64_win.cpp""")
+		sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/cpu_detect_x64_win.cpp""")
 	else:
-		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x86_win.cpp""")
+		sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/cpu_detect_x86_win.cpp""")
 else:
 	if bitwidth == '64':
-		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x64_gcc.cpp""")
+		sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/cpu_detect_x64_gcc.cpp""")
 	else:
-		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x86_gcc.cpp""")
+		sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/cpu_detect_x86_gcc.cpp""")
 
 
 #KissFFT
@@ -1309,8 +1310,13 @@ else:
 # are enabled. All 64-bit CPUs have MMX and SSE as well.
 if bitwidth == '64' or (not 'win' in platformString and int(flags['optimize']) > 1) \
     or ('win' in platformString and int(flags['optimize']) > 2):
-    sources += Split("""#lib/""" + soundtouch_path + """/mmx_optimized.cpp #lib/""" + soundtouch_path + """/sse_optimized.cpp""")
+    sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/mmx_optimized.cpp #lib/""" + soundtouch_path + """/source/SoundTouch/sse_optimized.cpp""")
     env.Append(CPPDEFINES='ALLOW_X86_OPTIMIZATIONS')
+else:
+	#OWEN EDIT: oh, just build with it
+	if int(flags['tuned']) == 1:
+		sources += Split("""#lib/""" + soundtouch_path + """/source/SoundTouch/mmx_optimized.cpp #lib/""" + soundtouch_path + """/source/SoundTouch/sse_optimized.cpp""")
+		env.Append(CPPDEFINES='ALLOW_X86_OPTIMIZATIONS')
 
 # Enable SoundTouch 3DNow! optimizations for Windows (decides at runtime if they're useful)
 if 'win' in platformString and not bitwidth == '64':
@@ -1409,6 +1415,7 @@ if 'msvc' in COMMAND_LINE_TARGETS:
 	msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = sources, incs = includes, variant = 'Debug', runfile = '../dist' + bitwidth + '/mixxx.exe')
 
 	# Reenable this once bug in scons is fixed...
+
 	#msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = sources, incs = includes, variant = 'Release', runfile = '../dist' + bitwidth + /mixxx.exe')
 
 	env.Alias('msvc', msvc)
