--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -24,7 +24,7 @@ def determinePlatform():
 	else:
 		print 'Platform: Unknown (assuming Linux-like,) ' + machine
 		platformString = 'linux'
-		
+	
 	Export('platformString')
 	return platformString
 
@@ -32,10 +32,6 @@ def determineArchitecture(platformString):
 	architecture = platform.architecture()
 	machine = platform.machine()
 	bitwidth = architecture[0][0:2];	# "32" or "64"
-	
-	Export('architecture')
-	Export('machine')	#So architecture-specific decisions & optimizations can be made in the SConscript
-	Export('bitwidth')
 
 	# Allow to override auto-detection (environment variables must already be set appropriately with SETENV.CMD /xp /x86 or /x64)
 	# (Auto-detection of 64-bit only works correctly if you're running a 64-bit version of Python, otherwise it'll see an x86 system)
@@ -49,7 +45,6 @@ def determineArchitecture(platformString):
 			env.Append(CXXFLAGS = '-m32')
 			env.Append(LINKFLAGS = '-m32')
 		bitwidth = '32'
-		print 'FORCING ' +bitwidth+ '-BIT BUILD: ' + platformString + ' ' + machine + ' (' + bitwidth + 'bit)'
 
 	#force 64-bit compile
 	if int(flags_force64) and not int(flags_force32):
@@ -60,9 +55,15 @@ def determineArchitecture(platformString):
 			env.Append(CXXFLAGS = '-m64')
 			env.Append(LINKFLAGS = '-m64')
 		bitwidth = '64'
+		
+	if int(flags_force64) or int(flags_force32):
 		print 'FORCING ' +bitwidth+ '-BIT BUILD: ' + platformString + ' ' + machine + ' (' + bitwidth + 'bit)'
 
 	print 'Binary format: ' + architecture[1]
+	
+	Export('architecture')
+	Export('machine')	#So architecture-specific decisions & optimizations can be made in the SConscript
+	Export('bitwidth')
 
 	return {"machine":machine, "bitwidth":bitwidth}
 
@@ -849,6 +850,8 @@ env.Uic4('dlgautodj.ui')
 env.Qrc('#res/mixxx.qrc')
 sources += Split(""" #res/qrc_mixxx.cc """)
 
+# FIXME: This needs to be moved up and must be linked into the application to have any effect
+#Add Windows resource file with icons and such
 if 'win' in platformString:
 	env.RES('mixxx.rc')
 	sources += Split(""" mixxx.res """)
@@ -1409,7 +1412,7 @@ if 'msvc' in COMMAND_LINE_TARGETS:
 	msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = sources, incs = includes, variant = 'Debug', runfile = '../dist' + bitwidth + '/mixxx.exe')
 
 	# Reenable this once bug in scons is fixed...
-	#msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = sources, incs = includes, variant = 'Release', runfile = '../dist' + bitwidth + /mixxx.exe')
+	#msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = sources, incs = includes, variant = 'Release', runfile = '../dist' + bitwidth + '/mixxx.exe')
 
 	env.Alias('msvc', msvc)
 
