Remove parseHeader for Ogg, MP3, WAV, AIFF, FLAC, and M4A. Add new TagLib handling for generic tags and file information. Add special casing for ID3v2, Ogg XiphComment, APE tags, and MP4 tags to print out every key/value pair contained in the file and also to extract the BPM for XiphComments (FLAC, Ogg) and ID3v2 (FLAC, MP3). I don't know what the standard is for MP4 and APE for storing BPM so I can't extract that now.

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -589,6 +589,9 @@ if not conf.CheckLib('ogg'):
 	print 'Did not find libogg.a, libogg.lib, or the libogg development headers, exiting!'
 	Exit(1)
 
+if not conf.CheckLib(['libtag', 'tag']):
+        print 'Did not find taglib or its development headers, exiting!'
+        Exit(1)
 
 ## Check for OpenGL (it's messy to do it for all three platforms)
 ## XXX this should *NOT* have hardcoded paths like this
